--- a/package.json
+++ b/package.json
@@ -27,16 +27,19 @@
     "javascript",
     "typescript"
   ],
-  "author": "Your Name <your.email@example.com>",
+  "author": {
+    "name": "Jan Eckerlein",
+    "email": "eckerlein.jan@gmail.com"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/obj-path-attic.git"
+    "url": "https://github.com/Jan-Eckerlein/objPathAttic"
   },
   "bugs": {
-    "url": "https://github.com/your-username/obj-path-attic/issues"
+    "url": "https://github.com/Jan-Eckerlein/objPathAttic"
   },
-  "homepage": "https://github.com/your-username/obj-path-attic#readme",
+  "homepage": "https://github.com/Jan-Eckerlein/objPathAttic#readme",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
