--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "lint": "npx eslint src/**",
     "format": "npx prettier . --write",
     "build": "tsc",
@@ -42,13 +42,16 @@
   "homepage": "https://github.com/Jan-Eckerlein/objPathAttic#readme",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.9.1",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.12.0",
     "prettier": "3.3.3",
-    "typescript": "^5.6.3"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.5"
   },
   "files": [
     "dist"
