--- a/package.json
+++ b/package.json
@@ -34,23 +34,21 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jan-Eckerlein/objPathAttic"
+    "url": "git+https://github.com/Jan-Eckerlein/objPathAttic.git"
   },
   "bugs": {
     "url": "https://github.com/Jan-Eckerlein/objPathAttic"
   },
   "homepage": "https://github.com/Jan-Eckerlein/objPathAttic#readme",
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
     "@types/node": "^22.9.1",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "typescript": "^5.6.3",
+    "@eslint/js": "^9.15.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.12.0",
     "prettier": "3.3.3",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
     "vitest": "^2.1.5"
   },
   "files": [
